--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==5.0.9
+django-browser-reload==1.17.0
 psycopg2==2.9.10
 python-decouple==3.8
 sqlparse==0.5.2
+gunicorn>=20.0.4
