--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: '3.4'
+version: "3.4"
 
 services:
   trivia:
     build:
       context: .
       dockerfile: ./Dockerfile
+    image: trivia-app
     ports:
       - 8000:8000
     environment:
-      DJANGO_SECRET_KEY: $DJANGO_SECRET_KEY
-      DJANGO_DEBUG: $DJANGO_DEBUG
-      DJANGO_ALLOWED_HOSTS: $DJANGO_ALLOWED_HOSTS
-      DB_NAME: $DB_NAME
-      DB_USER: $DB_USER
-      DB_PASSWORD: $DB_PASSWORD
-      DB_HOST: $DB_HOST
-      DB_PORT: $DB_PORT
+      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+      DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
+      DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
     depends_on:
       - db
     command: >
@@ -26,10 +27,10 @@ services:
       "
 
   db:
-    image: postgres:13
+    image: postgres:16
     environment:
-      POSTGRES_DB: $DB_NAME
-      POSTGRES_USER: $DB_USER
-      POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_DB: ${{ secrets.DB_NAME }}
+      POSTGRES_USER: ${{ secrets.DB_USER }}
+      POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
     ports:
       - 5432:5432
