--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     ports:
       - 8000:8000
     environment:
-      DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-      DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
-      DJANGO_ALLOWED_HOSTS: ${{ secrets.DJANGO_ALLOWED_HOSTS }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_PORT: ${{ secrets.DB_PORT }}
+      DJANGO_SECRET_KEY: $${{ secrets.DJANGO_SECRET_KEY }}
+      DJANGO_DEBUG: $${{ secrets.DJANGO_DEBUG }}
+      DJANGO_ALLOWED_HOSTS: $${{ secrets.DJANGO_ALLOWED_HOSTS }}
+      DB_NAME: $${{ secrets.DB_NAME }}
+      DB_USER: $${{ secrets.DB_USER }}
+      DB_PASSWORD: $${{ secrets.DB_PASSWORD }}
+      DB_HOST: $${{ secrets.DB_HOST }}
+      DB_PORT: $${{ secrets.DB_PORT }}
     depends_on:
       - db
     command: >
