Fix interpolation format for PostgreSQL environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
   db:
     image: postgres:16
     environment:
-      POSTGRES_DB: ${{ secrets.DB_NAME }}
-      POSTGRES_USER: ${{ secrets.DB_USER }}
-      POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      POSTGRES_DB: $${{ secrets.DB_NAME }}
+      POSTGRES_USER: $${{ secrets.DB_USER }}
+      POSTGRES_PASSWORD: $${{ secrets.DB_PASSWORD }}
     ports:
       - 5432:5432
