--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,3 +33,33 @@ jobs:
         run: |
           docker save trivia-app:latest | gzip > trivia-app.tar.gz
           aws s3 cp trivia-app.tar.gz s3://${{ secrets.S3_BUCKET_NAME }}/trivia-app/trivia-app.tar.gz
+
+  deploy:
+    name: Deploy Docker Image to EC2
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure SSH for EC2
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Copy files to EC2
+        run: |
+          scp -i ~/.ssh/id_rsa docker-compose.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/docker-compose.yml
+
+      - name: Deploy on EC2
+        run: |
+          ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          cd /home/${{ secrets.EC2_USER }}
+          wget https://${{ secrets.S3_BUCKET_NAME }}.s3.amazonaws.com/trivia-app/trivia-app.tar.gz
+          gunzip -c trivia-app.tar.gz | docker load
+          # ensure docker compose is installed
+          if ! command -v docker-compose &> /dev/null
+          then
+              sudo dnf install python3-pip -y
+              pip3 install --user docker-compose
+          fi
+          docker-compose up -d
+          EOF
