Remove docker-compose down command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,13 +64,12 @@ jobs:
           scp -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem docker-compose-prod.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/docker-compose.yml
           scp -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/.env
 
-      - name: Deploy on EC2
+      - name: Deploy to EC2
         run: |
           ssh -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           cd /home/${{ secrets.EC2_USER }}
           rm -rf ./trivia-app.tar.gz
           wget https://${{ secrets.S3_BUCKET_NAME }}.s3.amazonaws.com/trivia-app/trivia-app.tar.gz
           gunzip -c trivia-app.tar.gz | docker load
-          docker-compose down
           docker-compose up -d
           EOF
