--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -21,13 +21,14 @@ services:
       - trivia-net
     command: >
       sh -c "
+      sleep 10 &&
       python manage.py migrate &&
       python seed.py &&
       gunicorn --bind 0.0.0.0:8000 trivia_project.wsgi
       "
 
   db:
-    image: postgres:16
+    image: postgres:16-alpine
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
