--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 Django==5.0.9
 django-browser-reload==1.17.0
+gunicorn==23.0.0
+packaging==24.2
 prometheus_client==0.21.0
 psycopg2==2.9.10
 python-decouple==3.8
