Rename monitoring network to monitoring_monitoring and update its configuration

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -19,7 +19,7 @@ services:
       - db
     networks:
       - trivia-net
-      - monitoring
+      - monitoring_monitoring
     volumes:
       - ./staticfiles:/app/staticfiles
     command: >
@@ -46,5 +46,5 @@ networks:
   trivia-net:
     driver: bridge
   
-  monitoring:
-    driver: bridge
+  monitoring_monitoring:
+    external: true
