--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -1,50 +1,55 @@
 services:
-  trivia:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    image: trivia-app
-    ports:
-      - 8000:8000
-    environment:
-      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
-      DJANGO_DEBUG: ${DJANGO_DEBUG}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-    depends_on:
-      - db
-    networks:
-      - trivia-net
-      - monitoring
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
     volumes:
-      - ./staticfiles:/app/staticfiles
-    command: >
-      sh -c "
-      sleep 10 &&
-      python manage.py collectstatic --noinput &&
-      python manage.py migrate &&
-      python seed.py &&
-      gunicorn --bind 0.0.0.0:8000 trivia_project.wsgi
-      "
-
-  db:
-    image: postgres:16-alpine
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - 5432:5432
+      - 9090:9090
     networks:
-      - trivia-net
+      - monitoring
+    restart: always
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL}
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_LOG_LEVEL=debug
+    networks:
+      - monitoring
+    depends_on:
+      - prometheus
+    restart: always
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - 8080:8080
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    networks:
+      - monitoring
+    restart: always
+
+  node_exporter:
+    image: prom/node-exporter:latest
+    container_name: node_exporter
+    ports:
+      - 9100:9100
+    networks:
+      - monitoring
+    restart: always
 
 networks:
-  trivia-net:
-    driver: bridge
-  
   monitoring:
     driver: bridge
